# oaemapi

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  api-test.py  config.py  docker-compose.yaml  edge_provider_test.py  edge_test.py  main.py  pyproject.toml  read-oaem.py  requirements.txt  setup.py  sunspan.py
app/: __init__.py  __main__.py  config.py  data.py  dependencies.py  edge.py  edge_provider.py  geoid.py  gml.py  main.py  neighborhood.py  oaem.py  plotting.py  routes.py  suntrack.py  wfs.py
app/core/: geoid.py  neighborhood.py  oaem.py  sunspan.py  wfs.py
app/geoid/: __init__.py  geoid.py
app/static/: request_oaem.js  styles.css
app/templates/: index.html
app/wfs/: request.py  response.py
oaemapi/: GCG2016NRW.txt  __main__.py  config.py  geoid.py  neighborhood.py  oaem.py  util.py  wfs_lod1.py
oaemapi/core/: neighborhood.py  oaem.py
oaemapi/geoid/: __init__.py  geoid.py
oaemapi/templates/: index.html  index_chartjs.html
oaemapi/wfs/: request.py  response.py
utils/: download-lod-2.py  edge_provider_test.py  gml2csv.py  poly_test.py  read_test.py  track_oaem.py
