[tool.poetry]
name = "oaemapi"
version = "0.5.0"
description = "Obstruction Adaptive Elevation Mask API (OAEM-API)"
authors = ["Gereon Tombrink <tombrink@igg.uni-bonn.de>"]
maintainers = ["Gereon Tombrink <tombrink@igg.uni-bonn.de>"]
license = "MIT"
keywords = ["sky obstruction", "elevation mask", "obstruction adaptive", "OAEM", "OAEM-API", "GNSS"]
readme = "README.md"
homepage = "https://github.com/gereon-t/oaemapi"
repository = "https://github.com/gereon-t/oaemapi.git"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.2"
scipy = "^1.11.4"
fastapi = {extras = ["full"], version = "^0.104.1"}
intervaltree = "^3.1.0"
pointset = "^0.1.5"
pandas = "^2.1.3"
xmltodict = "^0.13.0"
pvlib = "^0.10.2"
plotly = "^5.18.0"
uvicorn = "^0.24.0.post1"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.9.1"
pre-commit = "^3.5.0"
tox = "^4.11.3"

[tool.isort]
profile = "black"
line_length = 119

[tool.black]
line-length = 119

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"